United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6951319 enable solaris builds using Sun Studio 12 update 1
6951319 : enable solaris builds using Sun Studio 12 update 1

Details
Type:
Bug
Submit Date:
2010-05-11
Status:
Closed
Updated Date:
2012-09-04
Project Name:
JDK
Resolved Date:
2012-05-02
Component:
hotspot
OS:
generic,solaris_10
Sub-Component:
build
CPU:
sparc,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
aten,hs18,7
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:
Duplicate:
Relates:
Relates:
Relates:

Sub Tasks

Description
Current hotspot source cannot be built using Sun Studio 12 update 1 (plus patches) on solaris:

a) more aggressive tail-call elimination provokes dtrace bug 6672627 on solaris 10
b) jumps over the lock prefix in .il files on intel cause an assertion failure (ube bug 6895832)
c) a temporary object is passed as a non-const reference arg to MacroAssembler::set_oop() on sparc
d) some #ifdefs are missing around non-product code
e) minor syntax nits

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/fb1a39993f69
                                     
2010-05-19
SUGGESTED FIX

Attached.
                                     
2010-05-18
EVALUATION

a) more aggressive tail-call elimination provokes dtrace bug 6672627 on solaris 10
	add a more complete workaround to avoid dtrace probes as tail calls.

b) jumps over the lock prefix in .il files on intel cause an assertion failure (ube bug 6895832)
	remove jumps over the lock prefix in .il files: 64-bit code uses the lock prefix
        unconditionally; 32-bit code jumps over the entire instruction. 

c) a temporary object is passed as a non-const reference arg to MacroAssembler::set_oop() on sparc
	change MacroAssembler::set_oop() to take a const reference

d) some #ifdefs are missing around non-product code
	add them.

e) minor syntax nits
	add some casts.

Also cleanup per-file optimization levels in several makefiles.
                                     
2010-05-11



Hardware and Software, Engineered to Work Together