6951319: enable solaris builds using Sun Studio 12 update 1

Reviewed-by: kamg, ysr, dholmes, johnc