hotspot/src/share/vm/runtime/java.cpp
@@ -470,6 +470,7 @@ void vm_exit(int code) {
 void notify_vm_shutdown() {
   // For now, just a dtrace probe.
   HS_DTRACE_PROBE(hotspot, vm__shutdown);
+  HS_DTRACE_WORKAROUND_TAIL_CALL_BUG();
 }
 
 void vm_direct_exit(int code) {
